--- a/trangCotTruyen.html
+++ b/trangCotTruyen.html
@@ -196,7 +196,7 @@
                 <!-- Copyright -->
                 <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.05);">
                 © 2022 Copyright:
-                <a class="text-reset fw-bold" href="http://127.0.0.1:5500/6251071102%20-%20Le%20Quoc%20Tien%20-%20TH2/bootstrap-5.2.3-dist/bootstrap-5.2.3-dist/trangchu.html">Tintucgame.com</a>
+                <a class="text-reset fw-bold" href="http://127.0.0.1:5500/6251071102%20-%20Le%20Quoc%20Tien%20-%20TH2/bootstrap-5.2.3-dist/bootstrap-5.2.3-dist/trangchu.html">tintucgame.com</a>
                 </div>
                 <!-- Copyright -->
             </footer>
