--- a/lienhe.html
+++ b/lienhe.html
@@ -67,6 +67,6 @@
       }
     </script>
     <hr>
-    <p  class="line"><a style="text-decoration: none; color: black; border-style:double; padding: 5px 5px 5px 5px;"href="trangchu.html">Trang chủ</a></p>
+    <p  class="line"><a style="text-decoration: none; color: black; border-style:double; padding: 5px 5px 5px 5px;"href="index.html">Trang chủ</a></p>
   </body>
 </html>
